--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -2,7 +2,7 @@
 owner: Gabriel Morrison
 # Leave `github` empty if not needed
 github: gisforgabriel
-baseurl: "/_site"
+baseurl: "/"
 url: "https://gisforgabriel.github.io/CV-olio/"
 # Choose `pattern-style` from: china-a, lines-a, lines-b, lines-c, lines-45-a, lines-45-b, lines-45-c, cross-a, cross-b, cross-c, cross-thin-a, cross-thin-b, cross-thin-c, candy-a, candy-b, candy-c (not working), feather
 pattern-style: feather
