--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -5,9 +5,9 @@ github: gisforgabriel
 baseurl: "/"
 url: "https://gisforgabriel.github.io/CV-olio/"
 # Choose `pattern-style` from: china-a, lines-a, lines-b, lines-c, lines-45-a, lines-45-b, lines-45-c, cross-a, cross-b, cross-c, cross-thin-a, cross-thin-b, cross-thin-c, candy-a, candy-b, candy-c (not working), feather
-pattern-style: feather
-pattern-background: wheat
-pattern-foreground: seagreen
+pattern-style: candy-b
+pattern-background: darkslategray
+pattern-foreground: cyan
 pattern-size: 5
 
 # Build settings
