--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -2,8 +2,8 @@
 owner: Gabriel Morrison
 # Leave `github` empty if not needed
 github: gisforgabriel
-baseurl: "/"
-url: "https://gisforgabriel.github.io/CV-olio/"
+baseurl: "/CV-olio/"
+url: "https://gisforgabriel.github.io/"
 # Choose `pattern-style` from: china-a, lines-a, lines-b, lines-c, lines-45-a, lines-45-b, lines-45-c, cross-a, cross-b, cross-c, cross-thin-a, cross-thin-b, cross-thin-c, candy-a, candy-b, candy-c (not working), feather
 pattern-style: candy-b
 pattern-background: darkslategray
