--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -11,7 +11,7 @@ pattern-foreground: cyan
 pattern-size: 5
 
 # Build settings
-exclude: [".rvmrc", ".rbenv-version", "ReadMe.md", "Rakefile", "Makefile",  "Gemfile", "Gemfile.lock", "vendor"]
+exclude: ["ReadMe.md", "Gemfile", "Gemfile.lock", "vendor"]
 markdown: kramdown
 kramdown:
   auto_ids: false
