name change to demo name

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-owner: Gabriel Morrison
+owner: Terry Gilliam
 # Leave `github` empty if not needed
 github: gisforgabriel
 baseurl: "/CV-olio/"
