--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,19 @@
-# Site settings - leave values empty if not required
-owner: Terry Gilliam
-github: gisforgabriel
+# Site settings
 baseurl: ""
 url: "https://cv-olio.netlify.com"
-# Choose `pattern-style` from: china-a, lines-a, lines-b, lines-c, lines-45-a, lines-45-b, lines-45-c, cross-a, cross-b, cross-c, cross-thin-a, cross-thin-b, cross-thin-c, candy-a, candy-b, candy-c (not working), feather
 pattern-style: candy-b
 pattern-background: darkslategray
 pattern-foreground: cyan
 pattern-size: 5
 language: en
 #seo: true
+
+# Personal settings
+owner: Terry Gilliam
+github: gisforgabriel
+email: terry.gilliam@gmail.com
+telephone: +44 (0)207 123 4568
+address: Highgate, London, UK N6 1MP
 
 # Build settings
 exclude: ["ReadMe.md", "Gemfile", "Gemfile.lock", "vendor"]
