--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: ruby
 rvm:
 - 2.1
 
-script: "bundle install && bundle exec jekyll build && bundle exec htmlproofer ./_site"
+script: "bundle install && bundle exec jekyll build --verbose --profile && bundle exec htmlproofer ./_site"
 
 env:
   global:
